--- a/web/style.css
+++ b/web/style.css
@@ -36,7 +36,7 @@ color: #000;
 
 .sidebar {
 width: 280px;
-height: 100vh;
+height: 100%;
 background-color: #fff;
 position: fixed;
 top: 0;
@@ -86,10 +86,19 @@ gap: 12px;
 font-weight: 500; 
 }
 
-.sidebar ul li a.selected {
-background-color: #f4f4f4;
-border: 1px solid #EBEBEB;
+.sidebar ul li a.active {
+background-color: #FFFCF2;
+border: 1px #FFE79A solid;
 border-radius: 8px;
+color: #FFC300;
+}
+
+.active-icon {
+stroke: #FFC300;
+}
+
+.inactive-icon {
+stroke: #1B1B1B;
 }
 
 .sidebar ul li a .notif {
@@ -109,7 +118,7 @@ height: 20px;
 
 .sidebar .logout {
 margin-top: 100%;
-padding-inline: 32px;
+padding: 32px;
 }
 
 .sidebar .logout img {
@@ -131,14 +140,27 @@ margin-left: 280px;
 width: calc(100vw - 280px);
 }
 
-.content .header {
+.header-fixed {
 width: 100%;
+position: fixed;
 border-bottom: 1px #EBEBEB solid;
 background-color: #fff;
 color: #000;
 }
 
-.content .header .htitle {
+.header-fixed .htitle {
+padding: 24px;
+font-size: 30px;
+font-weight: 600;
+}
+
+.header {
+width: 100%;
+background-color: transparent;
+color: transparent;
+}
+
+.header .htitle {
 padding: 24px;
 font-size: 30px;
 font-weight: 600;
@@ -148,14 +170,83 @@ font-weight: 600;
 padding: 24px;
 }
 
-.product {
+body::-webkit-scrollbar {
+display: none;
+}
+
+.analytics {
+width: 100%;
+gap: 16px;
 margin-bottom: 40px;
+display: flex;
+overflow-x: auto;
+}
+
+.analytics .container {
+width: 100%;
+display: flex;
+flex-direction: column;
+gap: 32px;
+border-radius: 8px;
+border: 1px #EBEBEB solid;
+padding: 12px;
+}
+
+.analytics .container .title-row {
+display: flex;
+align-items: center;
+gap: 8px;
+}
+
+.analytics .container .title {
+white-space: nowrap;
+}
+
+.analytics .container .title-row img {
+width: 32px;
+height: 32px;
+}
+
+.analytics .container .item-row {
+display: flex;
+align-items: center;
+gap: 16px;
+justify-content: space-between;
+}
+
+.analytics .container .item-row .income {
+font-weight: 700;
+font-size: 20px;
+white-space: nowrap;
+}
+
+.analytics .container .item-row .percentage-row {
+padding-inline: 10px;
+padding-block: 6px;
+border-radius: 64px;
+border: 1.5px rgba(236, 24, 24, 0.5) solid;
+background-color: rgba(236, 24, 24, 0.12);
+gap: 6px;
+display: flex;
+align-items: center;
+}
+
+
+.analytics .container .item-row .percentage-row img {
+height: 12px;
+width: 12px;
+}
+
+.analytics .container .item-row .percentage-row .percentage {
+font-size: 12px;
+color: #EC1A1A;
 }
 
 .product-row {
 display: flex;
 justify-content: space-between;
 align-items: center;
+gap: 16px;
 margin-bottom: 16px;
 }
 
@@ -208,8 +299,7 @@ max-height: 140px;
 }
 
 .product-stock {
-padding-block: 8px;
-padding-inline: 16px;
+padding: 8px 16px;
 left: 8px; 
 top: 8px; 
 position: absolute; 
@@ -223,11 +313,12 @@ font-weight: 500;
 }
 
 .product-detail {
+width: 100%;
 padding: 12px;
+display: flex;
 flex-direction: column;
-align-items: flex-start;
+align-items: stretch;
 gap: 8px;
-display: inline-flex;
 font-weight: 500; 
 word-wrap: break-word;
 }
@@ -236,7 +327,6 @@ word-wrap: break-word;
 color: #1B1B1B; 
 font-size: 18px;
 }
-
 .product-category {
 color: #AFAFAF; 
 font-size: 14px;
@@ -249,39 +339,37 @@ margin-bottom: 16px;
 
 .product-button-row {
 width: 100%;
-display: inline-flex;
+display: flex;
+justify-content: space-between;
 gap: 8px;
 }
 
 .edit-product {
 border: 1px #EBEBEB solid;
 border-radius: 6px;
-padding-inline: 16px;
-padding-block: 10px;
+padding: 10px 18px;
 display: flex;
+white-space: nowrap;
 align-items: center;
 gap: 8px;
-}
-
-
-.edit-product-img {
-width: 20px;
-height: 20px;
 }
 
 .delete-product {
 border: 1.50px #EC1A1A solid;
 border-radius: 6px;
 background-color: #FFEEEE;
-padding-inline: 18px;
-padding-block: 10px;
+padding: 10px 18px;
 display: flex;
 align-items: center;
 }
 
-.delete-product-img {
-width: 20px;
-height: 20px;
+.request-stock {
+width: 100%; 
+border: 1px #EBEBEB solid; 
+border-radius: 6px; 
+padding: 10px 18px; 
+display: inline-flex; 
+justify-content: center;
 }
 
 .transaction {
@@ -291,12 +379,13 @@ border: 1px #EBEBEB solid;
 }
 
 .transaction-row {
-padding-inline: 16px;
-padding-block: 12px;
+border-radius: 8px 8px 0 0;
+padding: 12px 16px;
 background-color: #f4f4f4;
 display: flex;
 justify-content: space-between;
 align-items: center;
+gap: 16px;
 }
 
 .transaction-row .title {
@@ -317,6 +406,7 @@ display: block;
 overflow-x: auto;
 text-align: left;
 border-collapse: collapse;
+table-layout: fixed;
 }
 
 th{
@@ -334,18 +424,14 @@ font-weight: 500;
 color: #000;
 }
 
-td .seedetail {
-display: inline-flex;
-text-align: center;
-padding-inline: 12px;
-padding-block: 8px;
+td :last-child {
+display: flex;
+justify-content: center;
+padding: 8px 12px;
 border-radius: 8px;
 background-color: #f4f4f4;
 border: 1px #EBEBEB solid;
 font-weight: 500;
 font-size: 14px;
+white-space: nowrap;
 }
-/* 
-<div style="width: 100%; height: 100%; padding-left: 12px; padding-right: 12px; padding-top: 8px; padding-bottom: 8px; background: #F4F4F4; border-radius: 8px; border: 1px #EBEBEB solid; justify-content: flex-start; align-items: center; gap: 10px; display: inline-flex">
-<div style="text-align: center; color: #1B1B1B; font-size: 14px; font-family: SF Pro Display; font-weight: 500; word-wrap: break-word">See Detail</div>
-</div> */
