Fixed dashboard and transaction page

--- a/web/style.css
+++ b/web/style.css
@@ -80,10 +80,15 @@ list-style: none;
 
 .sidebar ul li a {
 padding: 8px;
+border: 1px transparent solid;
 display: flex;
 align-items: center;
 gap: 12px;
 font-weight: 500; 
+}
+
+.sidebar ul li a svg path {
+stroke: #1B1B1B;
 }
 
 .sidebar ul li a.active {
@@ -93,12 +98,8 @@ border-radius: 8px;
 color: #FFC300;
 }
 
-.active-icon {
+.sidebar ul li a.active svg path {
 stroke: #FFC300;
-}
-
-.inactive-icon {
-stroke: #1B1B1B;
 }
 
 .sidebar ul li a .notif {
@@ -142,6 +143,7 @@ width: calc(100vw - 280px);
 
 .header-fixed {
 width: 100%;
+z-index: 1;
 position: fixed;
 border-bottom: 1px #EBEBEB solid;
 background-color: #fff;
@@ -247,7 +249,6 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 gap: 16px;
-margin-bottom: 16px;
 }
 
 .product-row .title {
@@ -345,6 +346,7 @@ gap: 8px;
 }
 
 .edit-product {
+cursor: pointer;
 border: 1px #EBEBEB solid;
 border-radius: 6px;
 padding: 10px 18px;
@@ -354,7 +356,20 @@ align-items: center;
 gap: 8px;
 }
 
+.edit-product-yellow {
+cursor: pointer;
+border: 1px transparent solid;
+border-radius: 6px;
+padding: 10px 18px;
+display: flex;
+white-space: nowrap;
+align-items: center;
+gap: 8px;
+background-color: #FFC300;
+}
+
 .delete-product {
+cursor: pointer;
 border: 1.50px #EC1A1A solid;
 border-radius: 6px;
 background-color: #FFEEEE;
@@ -364,6 +379,7 @@ align-items: center;
 }
 
 .request-stock {
+cursor: pointer;
 width: 100%; 
 border: 1px #EBEBEB solid; 
 border-radius: 6px; 
@@ -411,27 +427,165 @@ table-layout: fixed;
 
 th{
 width: 100vw;
-padding-inline: 16px;
-padding-block: 12px;
+padding: 12px 16px;
 font-weight: 500;
 color: #AFAFAF;
+border-bottom: 1px #EBEBEB solid;
+text-wrap: nowrap;
 }
 
 td {
-padding-inline: 16px;
-padding-block: 12px;
+width: 20%;
+padding: 12px 16px;
 font-weight: 500;
 color: #000;
+white-space: pre-wrap; 
+}
+
+tbody tr:hover {
+background-color: #fafafa;
 }
 
 td :last-child {
-display: flex;
-justify-content: center;
+display: inline-flex;
+text-align: center;
+cursor: pointer;
 padding: 8px 12px;
 border-radius: 8px;
 background-color: #f4f4f4;
 border: 1px #EBEBEB solid;
 font-weight: 500;
-font-size: 14px;
+font-size: 16px;
 white-space: nowrap;
+}
+
+/* falah css : */
+
+.searchbar {
+    width: 35%;
+    padding: 10px 8px;
+    background-color: #f4f4f4;
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    border: 1px solid transparent;
+}
+
+.searchbox {
+    font-size: 16px;
+    margin-left: 12px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
+.modal-transaction {
+display: none;
+position: fixed;
+z-index: 1;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+background-color: rgb(0, 0, 0, 30%);
+}
+
+.modal-container {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+display: flex;
+flex-direction: column;
+justify-content: center;
+margin: auto;
+width: 660px;
+background-color: #fff;
+border-radius: 16px;
+box-sizing: border-box;
+}
+
+.modal-header {
+font-size: 24px;
+font-weight: 300;
+text-align: center;
+width: 100%;
+padding: 16px;
+border-bottom: 1px solid #EBEBEB;
+}
+
+.stamp {
+margin: 16px;
+box-sizing: border-box;
+}
+
+.stamp td:first-child {
+color: #afafaf;
+}
+
+.stamp td:last-child {
+text-align: right;
+}
+
+.purchased {
+width: calc(100%-32px);
+display: inline-block;
+margin-inline: 16px;
+border-collapse: collapse;
+border-radius: 8px;
+border: 1px solid #EBEBEB;
+box-sizing: border-box;
+}
+
+.purchased thead {
+border-bottom: 1px solid #ebebeb;
+}
+
+.purchased thead, .purchased tbody {
+width: 100%;
+display: table;
+}
+
+.purchased th {
+font-weight: 300;
+padding: 8px;
+}
+
+.purchased td {
+padding: 12px 8px;
+}
+
+.purchased th:first-child {
+text-align: left;
+color: #afafaf;
+}
+
+.purchased th:last-child, .purchased td:last-child {
+text-align: right;
+}
+
+.total-price {
+display: flex;
+justify-content: space-between;
+margin-top: 16px;
+padding-inline: 16px;
+border-top: 1px dashed #ebebeb;
+border-bottom: 1px solid #ebebeb;
+}
+
+.total-price p:first-child {
+color: #afafaf;
+}
+
+.modal-button {
+margin: 16px;
+padding: 16px;
+background-color: #fff;
+cursor: pointer;
+border-radius: 8px;
+border: 1px solid #ebebeb;
+}
+
+.modal-button:hover {
+background-color: #ebebeb;
 }
