--- a/web/module/transaction/style.css
+++ b/web/module/transaction/style.css
@@ -202,7 +202,6 @@ a {
     text-align: center;
     width: 80px;
     cursor: pointer;
-
 }
 
 .filter-label:not(:last-child) {
@@ -220,12 +219,20 @@ a {
     padding: 8.5px;
 }
 
+.control {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .btn-add {
     background-color: #ffc300;
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
     padding: 10px 16px;
+    border: none;
     border-radius: 8px;
     gap: 8px;
 }
@@ -281,7 +288,7 @@ a {
     font-size: 14px;
 }
 
-.modal-transaction {
+.modal-seedetail {
     display: none;
     position: fixed;
     z-index: 1;
@@ -292,7 +299,7 @@ a {
     background-color: rgb(0, 0, 0, 30%);
 }
 
-.modal-container {
+.detail-container {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -307,9 +314,9 @@ a {
     box-sizing: border-box;
 }
 
-.modal-header {
+.detail-header {
     font-size: 24px;
-    font-weight: 300;
+    font-weight: 500;
     text-align: center;
     width: 100%;
     padding: 16px;
@@ -379,7 +386,7 @@ a {
     color: #afafaf;
 }
 
-.modal-button {
+.btn-close-detail {
     margin: 16px;
     padding: 16px;
     background-color: #fff;
@@ -388,6 +395,6 @@ a {
     border: 1px solid #ebebeb;
 }
 
-.modal-button:hover {
+.btn-close-detail:hover {
     background-color: #ebebeb;
 }
