--- a/web/style.css
+++ b/web/style.css
@@ -462,21 +462,21 @@ white-space: nowrap;
 /* falah css : */
 
 .searchbar {
-    width: 35%;
-    padding: 10px 8px;
-    background-color: #f4f4f4;
-    display: flex;
-    align-items: center;
-    border-radius: 8px;
-    border: 1px solid transparent;
+width: 35%;
+padding: 10px 8px;
+background-color: #f4f4f4;
+display: flex;
+align-items: center;
+border-radius: 8px;
+border: 1px solid transparent;
 }
 
 .searchbox {
-    font-size: 16px;
-    margin-left: 12px;
-    background-color: transparent;
-    border: none;
-    outline: none;
+font-size: 16px;
+margin-left: 12px;
+background-color: transparent;
+border: none;
+outline: none;
 }
 
 .modal-transaction {
@@ -499,7 +499,8 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 margin: auto;
-width: 660px;
+width: 50vw;
+max-width: 80vw;
 background-color: #fff;
 border-radius: 16px;
 box-sizing: border-box;
@@ -507,78 +508,32 @@ box-sizing: border-box;
 
 .modal-header {
 font-size: 24px;
-font-weight: 300;
+font-weight: 500;
 text-align: center;
 width: 100%;
 padding: 16px;
 border-bottom: 1px solid #EBEBEB;
 }
 
-.stamp {
-margin: 16px;
-box-sizing: border-box;
-}
-
-.stamp td:first-child {
-color: #afafaf;
-}
-
-.stamp td:last-child {
-text-align: right;
-}
-
-.purchased {
-width: calc(100%-32px);
-display: inline-block;
-margin-inline: 16px;
-border-collapse: collapse;
-border-radius: 8px;
-border: 1px solid #EBEBEB;
-box-sizing: border-box;
-}
-
-.purchased thead {
-border-bottom: 1px solid #ebebeb;
-}
-
-.purchased thead, .purchased tbody {
-width: 100%;
-display: table;
-}
-
-.purchased th {
-font-weight: 300;
-padding: 8px;
-}
-
-.purchased td {
-padding: 12px 8px;
-}
-
-.purchased th:first-child {
-text-align: left;
-color: #afafaf;
-}
-
-.purchased th:last-child, .purchased td:last-child {
-text-align: right;
-}
-
-.total-price {
+.modal-content {
+padding: 16px;
 display: flex;
-justify-content: space-between;
-margin-top: 16px;
-padding-inline: 16px;
-border-top: 1px dashed #ebebeb;
-border-bottom: 1px solid #ebebeb;
+flex-direction:column;
+gap: 12px;
 }
 
-.total-price p:first-child {
-color: #afafaf;
+.order-attribute {
+color: #AFAFAF; 
+font-size: 16px;
+}
+
+.modal-footer {
+padding: 16px;
+border-top: 1px solid #EBEBEB;
 }
 
 .modal-button {
-margin: 16px;
+text-align: center;
 padding: 16px;
 background-color: #fff;
 cursor: pointer;
