--- a/web/style.css
+++ b/web/style.css
@@ -35,6 +35,7 @@ color: #000;
 }
 
 .sidebar {
+z-index: 1;
 width: 280px;
 height: 100%;
 background-color: #fff;
@@ -280,11 +281,12 @@ flex-direction: column;
 justify-content: flex-start; 
 align-items: flex-start; 
 display: flex;
+width: calc(100% / 4.18);
 min-width: 240px;
 }
 
 .product-preview {
-width: 260px; 
+width: 100%; 
 height: 170px; 
 padding: 15px;
 position: relative; 
@@ -351,9 +353,11 @@ border: 1px #EBEBEB solid;
 border-radius: 6px;
 padding: 10px 18px;
 display: flex;
+flex: 1;
 white-space: nowrap;
 align-items: center;
 gap: 8px;
+width: 100%;
 }
 
 .edit-product-yellow {
@@ -459,16 +463,67 @@ font-size: 16px;
 white-space: nowrap;
 }
 
+.view-button {
+padding: 8px 12px;
+border-radius: 8px;
+background-color: #f4f4f4;
+border: 1px #EBEBEB solid;
+font-weight: 500;
+font-size: 16px;
+white-space: nowrap;
+}
+
+.notif-box {
+display: flex; 
+justify-content: space-between; 
+align-items: center; 
+border-bottom: 1px #EBEBEB solid; 
+padding: 16px;
+}
+
+.message-box {
+display: flex;
+flex-direction: column; 
+gap: 8px;
+}
+
+.message {
+font-size: 18px;
+}
+
+.message .user-name {
+font-weight: 500;
+}
+
+.message-date {
+font-weight: 400; 
+font-size: 14px; 
+color: #AFAFAF;
+}
+
+.tx-detail {
+border-radius: 8px; 
+margin: 8px 0px;
+}
+
+.product-wrap {
+width: 100%;
+display: flex;
+flex-wrap: wrap;
+align-items: flex-start;
+gap: 16px;
+}
+
 /* falah css : */
 
 .searchbar {
-width: 35%;
+width: 370px;
+min-width: 260px;
 padding: 10px 8px;
 background-color: #f4f4f4;
 display: flex;
 align-items: center;
 border-radius: 8px;
-border: 1px solid transparent;
 }
 
 .searchbox {
