--- a/web/style.css
+++ b/web/style.css
@@ -480,112 +480,115 @@ white-space: nowrap;
 }
 
 .modal-transaction {
-display: none;
-position: fixed;
-z-index: 1;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-background-color: rgb(0, 0, 0, 30%);
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 30%);
 }
-
+    
 .modal-container {
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-display: flex;
-flex-direction: column;
-justify-content: center;
-margin: auto;
-width: 660px;
-background-color: #fff;
-border-radius: 16px;
-box-sizing: border-box;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    width: 50vw;
+    max-width: 80vw;
+    background-color: #fff;
+    border-radius: 16px;
+    box-sizing: border-box;
 }
-
+    
 .modal-header {
-font-size: 24px;
-font-weight: 300;
-text-align: center;
-width: 100%;
-padding: 16px;
-border-bottom: 1px solid #EBEBEB;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: center;
+    width: 100%;
+    padding: 16px;
+    border-bottom: 1px solid #EBEBEB;
 }
-
-.stamp {
-margin: 16px;
-box-sizing: border-box;
+    
+.modal-content {
+    padding: 16px;
+    display: flex;
+    flex-direction:column;
+    gap: 12px;
 }
-
-.stamp td:first-child {
-color: #afafaf;
+    
+.order-attribute {
+    color: #AFAFAF; 
+    font-size: 16px;
 }
-
-.stamp td:last-child {
-text-align: right;
+    
+.modal-footer {
+    padding: 16px;
+    border-top: 1px solid #EBEBEB;
 }
-
-.purchased {
-width: calc(100%-32px);
-display: inline-block;
-margin-inline: 16px;
-border-collapse: collapse;
-border-radius: 8px;
-border: 1px solid #EBEBEB;
-box-sizing: border-box;
-}
-
-.purchased thead {
-border-bottom: 1px solid #ebebeb;
-}
-
-.purchased thead, .purchased tbody {
-width: 100%;
-display: table;
-}
-
-.purchased th {
-font-weight: 300;
-padding: 8px;
-}
-
-.purchased td {
-padding: 12px 8px;
-}
-
-.purchased th:first-child {
-text-align: left;
-color: #afafaf;
-}
-
-.purchased th:last-child, .purchased td:last-child {
-text-align: right;
-}
-
-.total-price {
-display: flex;
-justify-content: space-between;
-margin-top: 16px;
-padding-inline: 16px;
-border-top: 1px dashed #ebebeb;
-border-bottom: 1px solid #ebebeb;
-}
-
-.total-price p:first-child {
-color: #afafaf;
-}
-
+    
 .modal-button {
-margin: 16px;
-padding: 16px;
-background-color: #fff;
-cursor: pointer;
-border-radius: 8px;
-border: 1px solid #ebebeb;
+    text-align: center;
+    padding: 16px;
+    background-color: #fff;
+    cursor: pointer;
+    border-radius: 8px;
+    border: 1px solid #ebebeb;
+}
+    
+.modal-button:hover {
+    background-color: #ebebeb;
 }
 
-.modal-button:hover {
-background-color: #ebebeb;
+.add-transaction-page {
+    /* display: none; */
+    position: absolute;
+    padding: 24px;
 }
+
+
+.back-to-transaction {
+    display: inline-flex;
+    justify-items: center;
+    cursor: pointer;
+    margin-bottom: 32px;
+    padding: 10px 16px;
+    font-size: 16px;
+    border-radius: 64px;
+    border: 1px solid #ebebeb;
+    gap: 8px;
+}
+
+.add-transaction-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    border-radius: 16px;
+    border: 1px solid #ebebeb;
+}
+
+.add-product {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 10px 8px;
+    background-color: #f4f4f4;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    gap: 12px;
+}
+
+.add-product input[type="text"] {
+    width: 100%;
+    font-size: 16px;
+    color: #AFAFAF;
+    outline: none;
+    border: none;
+    background-color: transparent;
+}
+
