--- a/web/style.css
+++ b/web/style.css
@@ -429,6 +429,10 @@ border-collapse: collapse;
 table-layout: fixed;
 }
 
+td :first-child {
+width: 100px;
+}
+
 th{
 width: 100vw;
 padding: 12px 16px;
@@ -527,6 +531,7 @@ border-radius: 8px;
 }
 
 .searchbox {
+width: 100%;
 font-size: 16px;
 margin-left: 12px;
 background-color: transparent;
@@ -562,9 +567,16 @@ box-sizing: border-box;
 }
 
 .modal-header {
-font-size: 24px;
+font-size: 20px;
 font-weight: 500;
-text-align: center;
+text-align: left;
+width: 100%;
+padding: 16px;
+border-bottom: 1px solid #EBEBEB;
+}
+
+.modal-header2 {
+display: flex;
 width: 100%;
 padding: 16px;
 border-bottom: 1px solid #EBEBEB;
