--- a/web/style.css
+++ b/web/style.css
@@ -564,6 +564,8 @@ align-items:center;
 
 /* falah css : */
 
+
+
 .searchbar {
 width: 370px;
 min-width: 260px;
@@ -584,80 +586,93 @@ outline: none;
 }
 
 .modal-transaction {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0, 30%);
+display: none;
+position: fixed;
+z-index: 1;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+background-color: rgb(0, 0, 0, 30%);
 }
-    
+
 .modal-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: auto;
-    width: 50vw;
-    max-width: 80vw;
-    background-color: #fff;
-    border-radius: 16px;
-    box-sizing: border-box;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: auto;
-    width: 50vw;
-    max-width: 80vw;
-    background-color: #fff;
-    border-radius: 16px;
-    box-sizing: border-box;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+display: flex;
+flex-direction: column;
+justify-content: center;
+margin: auto;
+width: 50vw;
+max-width: 80vw;
+background-color: #fff;
+border-radius: 16px;
+box-sizing: border-box;
 }
-    
+
 .modal-header {
-font-size: 24px;
+font-size: 20px;
 font-weight: 500;
-text-align: center;
+text-align: left;
 width: 100%;
 padding: 16px;
 border-bottom: 1px solid #EBEBEB;
 }
-    
+
+.modal-header2 {
+display: flex;
+width: 100%;
+padding: 16px;
+border-bottom: 1px solid #EBEBEB;
+}
+
 .modal-content {
-    padding: 16px;
-    display: flex;
-    flex-direction:column;
-    gap: 12px;
+padding: 16px;
+display: flex;
+flex-direction:column;
+gap: 12px;
 }
-    
+
 .order-attribute {
-    color: #AFAFAF; 
-    font-size: 16px;
+color: #AFAFAF; 
+font-size: 16px;
 }
-    
+
 .modal-footer {
-    padding: 16px;
-    border-top: 1px solid #EBEBEB;
+padding: 16px;
+border-top: 1px solid #EBEBEB;
 }
-    
+
 .modal-button {
-    text-align: center;
-    padding: 16px;
-    background-color: #fff;
-    cursor: pointer;
-    border-radius: 8px;
-    border: 1px solid #ebebeb;
+text-align: center;
+padding: 16px;
+background-color: #fff;
+cursor: pointer;
+border-radius: 8px;
+border: 1px solid #ebebeb;
 }
-    
+
 .modal-button:hover {
-    background-color: #ebebeb;
+background-color: #ebebeb;
+}
+
+.category-option {
+display: none;
+}
+
+.category-label {
+width: 100%; 
+padding: 16px; 
+cursor: pointer; 
+text-align: center; 
+border-radius: 8px; 
+border: 1px solid #ebebeb;
+}
+
+.category-option:checked + .category-label {
+color: #ffc300;
+background-color: #fff7dd;
+border: 1px solid #ffc300 !important;
 }
