--- a/web/style.css
+++ b/web/style.css
@@ -564,8 +564,6 @@ align-items:center;
 
 /* falah css : */
 
-
-
 .searchbar {
 width: 370px;
 min-width: 260px;
@@ -675,4 +673,10 @@ border: 1px solid #ebebeb;
 color: #ffc300;
 background-color: #fff7dd;
 border: 1px solid #ffc300 !important;
+}
+
+input[type="number"], input[type="text"] {
+    font-family: "SF Pro Display";
+    font-size: 16px;
+    font-weight: 500;
 }
